[gd_scene load_steps=48 format=3 uid="uid://b68y8jcqg3q28"]

[ext_resource type="Script" path="res://objects/character_body_2d.gd" id="1_q0kba"]
[ext_resource type="Texture2D" uid="uid://bwu73jxkwl1m8" path="res://sprites/Player2.png" id="2_fgent"]
[ext_resource type="Texture2D" uid="uid://dvrli4pesltwh" path="res://sprites/MediumShadow.png" id="2_ghnbm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_08hyg"]
atlas = ExtResource("2_fgent")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xngng"]
atlas = ExtResource("2_fgent")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mki17"]
atlas = ExtResource("2_fgent")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvx71"]
atlas = ExtResource("2_fgent")
region = Rect2(2368, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o6wl"]
atlas = ExtResource("2_fgent")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oovy"]
atlas = ExtResource("2_fgent")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro320"]
atlas = ExtResource("2_fgent")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cksmm"]
atlas = ExtResource("2_fgent")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jadm"]
atlas = ExtResource("2_fgent")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wp5i"]
atlas = ExtResource("2_fgent")
region = Rect2(3776, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo4yo"]
atlas = ExtResource("2_fgent")
region = Rect2(3712, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i4sf"]
atlas = ExtResource("2_fgent")
region = Rect2(3648, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s87gh"]
atlas = ExtResource("2_fgent")
region = Rect2(3584, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya4sb"]
atlas = ExtResource("2_fgent")
region = Rect2(3520, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_poyur"]
atlas = ExtResource("2_fgent")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h8um"]
atlas = ExtResource("2_fgent")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_maalv"]
atlas = ExtResource("2_fgent")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5i2e"]
atlas = ExtResource("2_fgent")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e5ij"]
atlas = ExtResource("2_fgent")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljdqv"]
atlas = ExtResource("2_fgent")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqv2g"]
atlas = ExtResource("2_fgent")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu6dh"]
atlas = ExtResource("2_fgent")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlor3"]
atlas = ExtResource("2_fgent")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i81ol"]
atlas = ExtResource("2_fgent")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1ats"]
atlas = ExtResource("2_fgent")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg7hc"]
atlas = ExtResource("2_fgent")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0nuv"]
atlas = ExtResource("2_fgent")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8pew"]
atlas = ExtResource("2_fgent")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it688"]
atlas = ExtResource("2_fgent")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxt0y"]
atlas = ExtResource("2_fgent")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhk0i"]
atlas = ExtResource("2_fgent")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8tyq"]
atlas = ExtResource("2_fgent")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yjq3"]
atlas = ExtResource("2_fgent")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0x33"]
atlas = ExtResource("2_fgent")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpm8m"]
atlas = ExtResource("2_fgent")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26v6k"]
atlas = ExtResource("2_fgent")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gmuh"]
atlas = ExtResource("2_fgent")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yme4b"]
atlas = ExtResource("2_fgent")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3i4e"]
atlas = ExtResource("2_fgent")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed7vt"]
atlas = ExtResource("2_fgent")
region = Rect2(3776, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4er8o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08hyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xngng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mki17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvx71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o6wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oovy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro320")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cksmm")
}],
"loop": true,
"name": &"atack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jadm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wp5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i4sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s87gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya4sb")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_poyur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h8um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maalv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5i2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljdqv")
}],
"loop": true,
"name": &"run_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqv2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu6dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlor3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i81ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1ats")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg7hc")
}],
"loop": true,
"name": &"run_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0nuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8pew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it688")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxt0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhk0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8tyq")
}],
"loop": true,
"name": &"run_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yjq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0x33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpm8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26v6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gmuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yme4b")
}],
"loop": true,
"name": &"run_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3i4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed7vt")
}],
"loop": true,
"name": &"stage",
"speed": 2.0
}]

[sub_resource type="GDScript" id="GDScript_a1w7s"]
script/source = "extends AnimatedSprite2D

# Called when the node enters the scene tree for the first time.
func _ready():
	play()
	set_animation(\"stage\")

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6boci"]
size = Vector2(13, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_yvgj0"]
radius = 13.0

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_q0kba")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.5, 12)
scale = Vector2(1.0625, 1)
texture = ExtResource("2_ghnbm")

[node name="Char_Ani" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_4er8o")
animation = &"atack"
frame_progress = 0.537071
script = SubResource("GDScript_a1w7s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_6boci")

[node name="PlayerHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
shape = SubResource("CircleShape2D_yvgj0")

[node name="headdown" type="Timer" parent="."]
wait_time = 0.338

[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_body_entered"]
[connection signal="timeout" from="headdown" to="." method="_on_headdown_timeout"]
